test/helm/gateway-helm/global-registry-override.in.yaml
global:
  image:
    registry: "private.registry"

deployment:
  envoyGateway:
    image:
      tag: "abcdef"

ratelimit: 
  image:
    registry: "docker.io"
    tag: "abcdef"
